--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </head>
 
   <body style="margin: 0px; overflow: hidden;">
-    <div class="arjs-loader">
+    <!-- <div class="arjs-loader">
       <div>Generando modelo, por favor espera</div>
-    </div>
+    </div> -->
     <a-scene
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
