--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a-marker type="marker" url="assets/pattern-marker.patt">
         <!-- Aquí cargas tu propio modelo 3D -->
         <a-entity
-          gltf-model="esap07.gbl"
+          gltf-model="esap07.gltf"
           scale="1 1 1"
           position="0 0 0"
         ></a-entity>
