--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a-scene
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
-      embedded
+      embedded arjs
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       
