--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>AR.js con A-Frame</title>
 
     <!-- Importa A-Frame y AR.js -->
-    <!-- <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/1.6.0/aframe/build/aframe-ar.js"> </script>
+     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> 
+    <script src="https://raw.githack.com/AR-js-org/AR.js/1.4.0/aframe/build/aframe-ar.js"> </script>
     
   </head>
 
