--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR.js con A-Frame</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Helmet</title>
 
-    <!-- Importa A-Frame y AR.js -->
-     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script> 
-    <script src="https://raw.githack.com/AR-js-org/AR.js/1.4.0/aframe/build/aframe-ar.js"> </script>
-    
-  </head>
+  <!-- Importar A-Frame -->
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
-  <body style="margin: 0px; overflow: hidden;">
-    <!-- <div class="arjs-loader">
-      <div>Generando modelo, por favor espera</div>
-    </div> -->
-    <a-scene
-      vr-mode-ui="enabled: false;"
-      renderer="logarithmicDepthBuffer: true;"
-      embedded arjs
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
+  <!-- Importar AR.js para A-Frame -->
+  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script>
+</head>
+<body style="margin: 0; overflow: hidden;">
+
+  <!-- Escena A-Frame con AR.js -->
+  <a-scene embedded arjs>
+
+    <!-- Cargar activos -->
+    <a-assets>
+      <!-- Definir el modelo 3D -->
+      <a-asset-item id="my-model" src="assets/esap14.glb"></a-asset-item>
+    </a-assets>
+
+    <!-- Marcador personalizado AR.js (cambiar preset="hiro" por type="pattern") -->
+    <a-marker type="pattern" url="assets/pattern-marker.patt">
       
-      <a-marker type="marker" url="assets/pattern-marker.patt">
-        <!-- Aquí cargas tu propio modelo 3D -->
-        <a-entity
-          gltf-model="esap07.gltf"
-          scale="1 1 1"
-          position="0 0 0"
-        ></a-entity>
-      </a-marker>
+      <!-- Incluir el modelo 3D -->
+      <a-entity gltf-model="#my-model" position="0 0 0" scale="1 1 1" rotation="0 0 0"></a-entity>
 
-      <!-- Cámara para la AR -->
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+    </a-marker>
+
+    <!-- Cámara AR.js para seguir el marcador -->
+    <a-entity camera></a-entity>
+
+  </a-scene>
+
+</body>
 </html>
