--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Cargar activos -->
     <a-assets>
       <!-- Definir el modelo 3D -->
-      <a-asset-item id="my-model" src="assets/esap14.glb"></a-asset-item>
+      <a-asset-item id="my-model" src="assets/animacion.glb"></a-asset-item>
     </a-assets>
 
     <!-- Marcador personalizado AR.js (cambiar preset="hiro" por type="pattern") -->
