--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
   <!-- Importar AR.js para A-Frame -->
   <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script>
 </head>
+
 <body style="margin: 0; overflow: hidden;">
 
   <!-- Escena A-Frame con AR.js -->
@@ -19,14 +21,14 @@
     <!-- Cargar activos -->
     <a-assets>
       <!-- Definir el modelo 3D -->
-      <a-asset-item id="my-model" src="assets/animacion.glb" animation-mixer></a-asset-item>
+      <a-asset-item id="my-model" src="assets/animacion.glb" animation-mixer="clip: *; loop: repeat;"></a-asset-item>
     </a-assets>
 
     <!-- Marcador personalizado AR.js (cambiar preset="hiro" por type="pattern") -->
     <a-marker type="pattern" url="assets/pattern-marker.patt">
-      
+
       <!-- Incluir el modelo 3D -->
-      <a-entity gltf-model="#my-model" position="0 0 0" scale="2 2 2" rotation="0 0 0"></a-entity>
+      <a-entity gltf-model="#my-model" position="0 0 0" scale="5 5 5" rotation="0 0 0"></a-entity>
 
     </a-marker>
 
@@ -36,4 +38,5 @@
   </a-scene>
 
 </body>
+
 </html>
