--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Helmet</title>
+  <title>cop 16</title>
 
   <!-- Importar A-Frame -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -21,7 +21,7 @@
     <!-- Cargar activos -->
     <a-assets>
       <!-- Definir el modelo 3D -->
-      <a-asset-item id="my-model" src="assets/animacion.glb" animation-mixer="clip: *; loop: repeat;"></a-asset-item>
+      <a-asset-item id="my-model" src="assets/animacion.glb"></a-asset-item>
     </a-assets>
 
     <!-- Marcador personalizado AR.js (cambiar preset="hiro" por type="pattern") -->
