--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>cop 16</title>
 
   <!-- Importar A-Frame -->
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
   <!-- Importar AR.js para A-Frame -->
-  <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <!-- <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script> -->
 </head>
 
 <body style="margin: 0; overflow: hidden;">
