--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
   <!-- Importar AR.js para A-Frame -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <!-- <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script> -->
+  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
+   <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script> 
 </head>
 
 <body style="margin: 0; overflow: hidden;">
