--- a/index.html
+++ b/index.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cop 16</title>
-
-  <!-- Importar A-Frame -->
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-
-  <!-- Importar AR.js para A-Frame -->
-  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
-    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.min.js"></script> 
+  <title>Mi escena de realidad aumentada</title>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+  <script src="https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
-
-<body style="margin: 0; overflow: hidden;">
-
-  <!-- Escena A-Frame con AR.js -->
+<body>
   <a-scene embedded arjs>
-
-    <!-- Cargar activos -->
-    <a-assets>
-      <!-- Definir el modelo 3D -->
-      <a-asset-item id="my-model" src="assets/animacion.glb"></a-asset-item>
-    </a-assets>
-
-    <!-- Marcador personalizado AR.js (cambiar preset="hiro" por type="pattern") -->
     <a-marker type="pattern" url="assets/pattern-marker.patt">
-
-      <!-- Incluir el modelo 3D -->
-      <a-entity gltf-model="#my-model" position="0 0 0" scale="4 4 4" rotation="0 0 0"></a-entity>
-
+      <a-entity gltf-model="assets/animacion.glb" scale="1 1 1"></a-entity>
     </a-marker>
-
-    <!-- Cámara AR.js para seguir el marcador -->
-    <a-entity camera></a-entity>
-
   </a-scene>
-
 </body>
-
 </html>
