--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a-marker type="pattern" url="assets/pattern-marker.patt">
       <a-entity gltf-model="assets/animacion.glb" scale="1 1 1"></a-entity>
     </a-marker>
+<a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
