--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-marker.patt">
-      <a-entity gltf-model="assets/animacion.glb" scale="0.5 0.5 0.5" position="0 0 0"></a-entity>
+      <a-entity gltf-model="assets/animacion.glb" scale="0.5 0.5 0.5" position="0 0 0" animation-mixer></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
