--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-marker.patt">
-      <a-entity gltf-model="assets/animacion.glb" scale="1 1 1" position="0 0 0"
-        animation-mixer="clip: scene;loop: repeat; clampWhenFinished: false;"></a-entity>
+      <a-entity gltf-model="assets/blue.glb" scale="1 1 1" position="0 0 0"
+        animation-mixer="loop: repeat;"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
