--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-marker.patt">
       <a-entity gltf-model="assets/blue.glb" scale="0.2 0.2 0.2" position="0 0 0"
-        animation-mixer="loop: repeat;"></a-entity>
+        animation-mixer="clip: *;loop: repeat;"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
