--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a-marker type="pattern" url="assets/pattern-marker.patt">
       <a-entity gltf-model="assets/animacion.glb" scale="0.5 0.5 0.5" position="0 0 0"
         animation-mixer="clip: *;loop: repeat;"></a-entity>
+        <a-sound src="url(assets/esapAudio.mpeg)" autoplay="true" loop="true"></a-sound>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
