--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <a-marker type="pattern" url="assets/pattern-marker.patt">
+    <a-marker type="pattern" url="assets/pattern.patt">
       <a-entity gltf-model="assets/animacion.glb" scale="0.5 0.5 0.5" position="0 0 0"
-        animation-mixer="clip: *;loop: repeat;"></a-entity>
-        <a-sound src="url(assets/esapAudio.mp3)" autoplay="true" loop="true"></a-sound>
+        animation-mixer="clip: *;loop: repeat;"
+        sound="src: url(assets/esapAudio.mp3)"></a-entity>
+        
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
