--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a-marker type="pattern" url="assets/pattern-marker.patt">
       <a-entity gltf-model="assets/animacion.glb" scale="0.2 0.2 0.2" position="0 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3)" autoplay="true" loop="true"></a-entity>
+        sound="src: url(esapAudio.mp3)" autoplay="true" loop="true"></a-entity>
         
     </a-marker>
     <a-entity camera></a-entity>
