--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-marker.patt">
-      <a-entity gltf-model="assets/animacion.glb" scale="0.2 0.2 0.2" position="0 0 0"
-        animation-mixer="clip: *;loop: repeat;">
+      <a-entity gltf-model="assets/animacion.glb" scale="0.5 0.5 0.5i" position="0 0 0"
+        animation-mixer="clip: *;loop: repeat;"
+        sound="src:url(assets/esapAudio.mp3); autoplay: true;">
       </a-entity>
-        <a-sound
-        src="url(esapAudio.mp3)"
-        autoplay="true"
-        loop="true"
-        ></a-sound>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
