--- a/index.html
+++ b/index.html
@@ -17,29 +17,17 @@
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-Group.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.5 0.5 0.5" position="0 0 0" rotation="-110 0 0"
-        animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); on: click;">
+        animation-mixer="clip: *;loop: repeat;">
       </a-entity>
     </a-marker>
+    <a-assets>
+      <audio id="voice" src="assets/esapAudio.mp3"></audio>
+    </a-assets>
+    <a-entity sound="src: #voice; autoplay: true"></a-entity>
     <a-entity camera></a-entity>
     <!-- <a-sound src="src: url(assets/esapAudio.mp3)" autoplay="true"></a-sound> -->
   </a-scene>
 
-
-
-
-
-
-
-  <script>
-    document.getElementById('playButton').addEventListener('click', function() {
-      var soundEntity = document.querySelector('[sound]');
-      if (soundEntity && !soundEntity.components.sound.isPlaying) {
-        soundEntity.components.sound.playSound();
-        this.style.display = 'none'; // Esconder el botón después de hacer clic
-      }
-    });
-  </script>
 </body>
 
 
