--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </a-entity>
     </a-marker>
     <a-assets>
-      <audio id="voice" src="assets/esapAudio.mp3"></audio>
+      <audio id="voice" src="assets/esapAudio.mp3" preload="auto"></audio>
     </a-assets>
-    <a-entity sound="src: #voice; autoplay: true"></a-entity>
+    <a-entity sound="src: #voice"></a-entity>
     <a-entity camera></a-entity>
     <!-- <a-sound src="src: url(assets/esapAudio.mp3)" autoplay="true"></a-sound> -->
   </a-scene>
