--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
         animation-mixer="clip: *;loop: repeat;">
       </a-entity>
     </a-marker>
-    <a-assets>
-      <audio id="voice" src="assets/esapAudio.mp3" preload="auto"></audio>
-    </a-assets>
-    <a-entity sound="src: #voice"></a-entity>
     <a-entity camera></a-entity>
-    <!-- <a-sound src="src: url(assets/esapAudio.mp3)" autoplay="true"></a-sound> -->
+     <a-sound src="assets/esapAudio.mp3" autoplay="true"></a-sound> 
   </a-scene>
 
 </body>
