--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a-marker type="pattern" url="assets/pattern-Group.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.5 0.5 0.5" position="0 0 0" rotation="-110 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); autoplay: true; loop: repeat;">
+        sound="src: url(assets/esapAudio.mp3); autoplay: true;">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
