--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <a-marker type="pattern" url="assets/pattern-blue.patt">
+    <a-marker type="pattern" url="assets/pattern-logo.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
         sound="src: url(assets/esapAudio.mp3); autoplay: true;">
