--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         sound="src: url(assets/esapAudio.mp3); autoplay: true;">
       </a-entity>
     </a-marker>
-    <a-entity camera ="fov: 75"></a-entity>
+    <a-entity camera position="0 0 5"></a-entity>
   </a-scene>
 
 </body>
