--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Paz y naturaleza</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script> -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
 </head>
 
@@ -20,7 +21,7 @@
 
       </a-entity>
     </a-marker>
-    <a-entity camera position="0 0 25"></a-entity>
+    <a-entity camera></a-entity>
   </a-scene>
 
 </body>
