--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paz y naturaleza</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script> -->
-  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
 </head>
@@ -15,14 +13,33 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-minb.patt">
+      <a-assets>
+        <!-- Pre-carga del sonido -->
+        <audio id="esapAudio" src="assets/esapAudio.mp3" preload="auto"></audio>
+      </a-assets>
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
-
+        sound="src: #esapAusio">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
+
+  <script>
+    // Espera a que el botón sea presionado para iniciar la experiencia y reproducir el sonido
+    document.getElementById('startButton').addEventListener('click', function() {
+      var audioElement = document.getElementById('esapAudio');
+      var soundEntity = document.querySelector('[sound]');
+
+      // Reproduce el sonido
+      if (audioElement && soundEntity && !soundEntity.components.sound.isPlaying) {
+        soundEntity.components.sound.playSound();
+      }
+
+      // Oculta el botón para que no interfiera
+      this.style.display = 'none';
+    });
+  </script>
 
 </body>
 
