--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-minb.patt">
-      <a-assets>
-        <!-- Pre-carga del sonido -->
-        <audio id="esapAudio" src="assets/esapAudio.mp3" preload="auto"></audio>
-      </a-assets>
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: #esapAusio">
+        sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
+
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
-  
 
 </body>
 
