--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paz y naturaleza</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script> -->
+  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
 </head>
@@ -14,14 +16,25 @@
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-minb.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
-        animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
+        animation-mixer="clip: *;loop: repeat;" sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
+        <a-scene>
+          <a-assets>
+            <audio id="river" src="river.mp3" preload="auto"></audio>
+          </a-assets>
 
+          <a-entity sound="src: #river"></a-entity>
+        </a-scene>
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
+
+
+  <script>
+    var entity = document.querySelector('[sound]');
+    entity.components.sound.playSound();
+  </script>
 </body>
 
 
