--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         animation-mixer="clip: *;loop: repeat;" sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
         <a-scene>
           <a-assets>
-            <audio id="river" src="river.mp3" preload="auto"></audio>
+            <audio id="river" src="assets/esapAudio.mp3" preload="auto"></audio>
           </a-assets>
 
           <a-entity sound="src: #river"></a-entity>
