--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a-marker type="pattern" url="assets/pattern-minb.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); on: click; autoplay: true;  loop: true;">
+        sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
 
       </a-entity>
     </a-marker>
