--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
+  <button id="playButton" style="position: absolute; z-index: 999; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    Toca para activar el sonido
+  </button>
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-minb.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
@@ -25,12 +28,14 @@
   </a-scene>
 
   <script>
-    var entidad = documento.querySelector( '[souond]' ); 
-    entidad.componentes.sound.playSound();
+    document.getElementById('playButton').addEventListener('click', function() {
+      var soundEntity = document.querySelector('[sound]');
+      if (soundEntity && !soundEntity.components.sound.isPlaying) {
+        soundEntity.components.sound.playSound();
+        this.style.display = 'none'; // Esconder el botón después de hacer clic
+      }
+    });
   </script>
+
 </body>
-
-
-
-
 </html>
