--- a/index.html
+++ b/index.html
@@ -19,22 +19,11 @@
     <a-marker type="pattern" url="assets/pattern-minb.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
-        sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
+        sound = "src: url(assets/esapAudio.mp3); on: click; loop: true;" 
 
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
-
-  <script>
-    document.getElementById('playButton').addEventListener('click', function() {
-      var soundEntity = document.querySelector('[sound]');
-      if (soundEntity && !soundEntity.components.sound.isPlaying) {
-        soundEntity.components.sound.playSound();
-        this.style.display = 'none'; // Esconder el botón después de hacer clic
-      }
-    });
-  </script>
-
 </body>
 </html>
