--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
+  <button id="playButton" style="position: absolute; z-index: 999; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    Comprometidos con la naturaleza
+  </button>
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
     <a-marker type="pattern" url="assets/pattern-minb.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
         sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
-        <button id="playButton" style="position: absolute; z-index: 999; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-        </button>
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
