--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paz y naturaleza</title>
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script> -->
-  <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-    <a-marker type="pattern" url="assets/pattern-minb.patt">
+    <a-marker type="pattern" url="assets/pattern-esapActive.patt">
       <a-entity gltf-model="assets/esapAnimation.glb" scale="0.3 0.3 0.3" position="0 0.5 0" rotation="-120 0 0"
         animation-mixer="clip: *;loop: repeat;"
         sound="src: url(assets/esapAudio.mp3); autoplay: true;  loop: true;">
