--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
+  <style>
+    /* Estilos para el logo */
+    #logo {
+      position: fixed;
+      top: 20px; /* Ajusta la posición según sea necesario */
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
+    }
+
+    /* Estilos para el mensaje de acceso */
+    #access-message {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      border: 1px solid black;
+      display: none; /* Comienza oculto */
+      z-index: 20; /* Asegúrate de que esté por encima del logo */
+    }
+  </style>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -16,8 +39,11 @@
     Tu navegador no soporta el elemento de audio.
   </audio>
 
+  <!-- Logo -->
+  <img id="logo" src="assets/logo.png" alt="Logo" width="200"> <!-- Cambia la ruta y el tamaño según sea necesario -->
+
   <!-- Mensaje de solicitud de acceso -->
-  <div id="access-message" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid black; display: none;">
+  <div id="access-message">
     Este sitio web inmersivo requiere acceso a los sensores de movimiento de tu dispositivo.
     <br><br>
     <button id="allow-button">Permitir</button>
@@ -48,14 +74,14 @@
 
     // Manejar la solicitud de permisos
     document.getElementById('allow-button').addEventListener('click', function() {
-      document.getElementById('access-message').style.display = 'none';
-      // Aquí puedes agregar la lógica para acceder a los sensores de movimiento
-      // Ejemplo:
+      document.getElementById('access-message').style.display = 'none'; // Ocultar el mensaje
       if (typeof DeviceMotionEvent.requestPermission === 'function') {
         DeviceMotionEvent.requestPermission()
           .then(function(response) {
-            if (response == 'granted') {
+            if (response === 'granted') {
               console.log('Permisos de movimiento concedidos');
+            } else {
+              console.log('Permisos de movimiento denegados por el usuario');
             }
           })
           .catch(function(error) {
@@ -65,7 +91,7 @@
     });
 
     document.getElementById('deny-button').addEventListener('click', function() {
-      document.getElementById('access-message').style.display = 'none';
+      document.getElementById('access-message').style.display = 'none'; // También oculta el mensaje al denegar
       console.log('Permisos de movimiento denegados');
     });
   </script>
