--- a/index.html
+++ b/index.html
@@ -9,33 +9,8 @@
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.0/dist/aframe-extras.min.js"></script>
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif; /* Aplicar la fuente Roboto */
-    }
-
-    /* Estilos para el logo */
-    #logo {
-      position: fixed;
-      top: 20px; /* Ajusta la posición según sea necesario */
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
-    }
-
-    /* Estilos para el mensaje de acceso */
-    #access-message {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 20px;
-      border: 1px solid black;
-      display: none; /* Comienza oculto */
-      z-index: 20; /* Asegúrate de que esté por encima del logo */
-    }
-  </style>
+  <!-- css link -->
+   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -45,14 +20,16 @@
   </audio>
 
   <!-- Logo -->
-  <img id="logo" src="assets/esap-cop.png" alt="Logo" width="200"> <!-- Cambia la ruta y el tamaño según sea necesario -->
+  <img id="logo" src="assets/esap-cop.png" alt="Logo" width="200">
 
   <!-- Mensaje de solicitud de acceso -->
   <div id="access-message">
-    Este sitio web inmersivo requiere acceso a los sensores de movimiento de tu dispositivo.
+    Para vivir la experiencia por favor acepta los permisos de cámara de tu dispositivo.
     <br><br>
-    <button id="allow-button">Permitir</button>
+    <div class="buttons">
+      <button id="allow-button">Permitir</button>
     <button id="deny-button">Denegar</button>
+    </div>
   </div>
 
   <a-scene embedded arjs="sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
